// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a jenkins instance addPlugins function 1`] = `
Array [
  Object {
    "apiVersion": "jenkins.io/v1alpha2",
    "kind": "Jenkins",
    "metadata": Object {
      "labels": Object {
        "app": "jenkins",
      },
      "name": "cdk8s-jenkins-construct",
      "namespace": "default",
    },
    "spec": Object {
      "configurationAsCode": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "groovyScripts": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "jenkinsAPISettings": Object {
        "authorizationStrategy": "createUser",
      },
      "master": Object {
        "basePlugins": Array [
          Object {
            "name": "kubernetes",
            "version": "1.31.3",
          },
          Object {
            "name": "workflow-job",
            "version": "1145.v7f2433caa07f",
          },
          Object {
            "name": "workflow-aggregator",
            "version": "2.6",
          },
          Object {
            "name": "git",
            "version": "4.10.3",
          },
          Object {
            "name": "job-dsl",
            "version": "1.78.1",
          },
          Object {
            "name": "configuration-as-code",
            "version": "1414.v878271fc496f",
          },
          Object {
            "name": "kubernetes-credentials-provider",
            "version": "0.20",
          },
        ],
        "containers": Array [
          Object {
            "image": "jenkins/jenkins:lts",
            "imagePullPolicy": "Always",
            "name": "jenkins-master",
            "resources": Object {
              "limits": Object {
                "cpu": "1500m",
                "memory": "3Gi",
              },
              "requests": Object {
                "cpu": "1",
                "memory": "500M",
              },
            },
          },
        ],
        "disableCSRFProtection": false,
        "plugins": Array [
          Object {
            "name": "simple-theme-plugin",
            "version": "0.7",
          },
        ],
      },
      "seedJobs": Array [],
    },
  },
]
`;

exports[`a jenkins instance addSeedJobs function 1`] = `
Array [
  Object {
    "apiVersion": "jenkins.io/v1alpha2",
    "kind": "Jenkins",
    "metadata": Object {
      "labels": Object {
        "app": "jenkins",
      },
      "name": "cdk8s-jenkins-construct",
      "namespace": "default",
    },
    "spec": Object {
      "configurationAsCode": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "groovyScripts": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "jenkinsAPISettings": Object {
        "authorizationStrategy": "createUser",
      },
      "master": Object {
        "basePlugins": Array [
          Object {
            "name": "kubernetes",
            "version": "1.31.3",
          },
          Object {
            "name": "workflow-job",
            "version": "1145.v7f2433caa07f",
          },
          Object {
            "name": "workflow-aggregator",
            "version": "2.6",
          },
          Object {
            "name": "git",
            "version": "4.10.3",
          },
          Object {
            "name": "job-dsl",
            "version": "1.78.1",
          },
          Object {
            "name": "configuration-as-code",
            "version": "1414.v878271fc496f",
          },
          Object {
            "name": "kubernetes-credentials-provider",
            "version": "0.20",
          },
        ],
        "containers": Array [
          Object {
            "image": "jenkins/jenkins:lts",
            "imagePullPolicy": "Always",
            "name": "jenkins-master",
            "resources": Object {
              "limits": Object {
                "cpu": "1500m",
                "memory": "3Gi",
              },
              "requests": Object {
                "cpu": "1",
                "memory": "500M",
              },
            },
          },
        ],
        "disableCSRFProtection": false,
        "plugins": Array [],
      },
      "seedJobs": Array [
        Object {
          "description": "Jenkins Operator repository",
          "id": "jenkins-operator",
          "repositoryBranch": "master",
          "repositoryUrl": "https://github.com/jenkinsci/kubernetes-operator.git",
          "targets": "cicd/jobs/*.jenkins",
        },
      ],
    },
  },
]
`;

exports[`a jenkins instance modify base plugin version using escape hatches 1`] = `
Array [
  Object {
    "apiVersion": "jenkins.io/v1alpha2",
    "kind": "Jenkins",
    "metadata": Object {
      "labels": Object {
        "app": "jenkins",
      },
      "name": "cdk8s-jenkins-construct",
      "namespace": "default",
    },
    "spec": Object {
      "configurationAsCode": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "groovyScripts": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "jenkinsAPISettings": Object {
        "authorizationStrategy": "createUser",
      },
      "master": Object {
        "basePlugins": Array [
          Object {
            "name": "kubernetes",
            "version": "1.31.3",
          },
          Object {
            "name": "workflow-job",
            "version": "3.00",
          },
          Object {
            "name": "workflow-aggregator",
            "version": "2.6",
          },
          Object {
            "name": "git",
            "version": "4.10.3",
          },
          Object {
            "name": "job-dsl",
            "version": "1.78.1",
          },
          Object {
            "name": "configuration-as-code",
            "version": "1414.v878271fc496f",
          },
          Object {
            "name": "kubernetes-credentials-provider",
            "version": "0.20",
          },
        ],
        "containers": Array [
          Object {
            "image": "jenkins/jenkins:lts",
            "imagePullPolicy": "Always",
            "name": "jenkins-master",
            "resources": Object {
              "limits": Object {
                "cpu": "1500m",
                "memory": "3Gi",
              },
              "requests": Object {
                "cpu": "1",
                "memory": "500M",
              },
            },
          },
        ],
        "disableCSRFProtection": false,
        "plugins": Array [],
      },
      "seedJobs": Array [],
    },
  },
]
`;

exports[`a jenkins instance with a user added plugin 1`] = `
Array [
  Object {
    "apiVersion": "jenkins.io/v1alpha2",
    "kind": "Jenkins",
    "metadata": Object {
      "labels": Object {
        "app": "jenkins",
      },
      "name": "cdk8s-jenkins-construct",
      "namespace": "default",
    },
    "spec": Object {
      "configurationAsCode": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "groovyScripts": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "jenkinsAPISettings": Object {
        "authorizationStrategy": "createUser",
      },
      "master": Object {
        "basePlugins": Array [
          Object {
            "name": "kubernetes",
            "version": "1.31.3",
          },
          Object {
            "name": "workflow-job",
            "version": "1145.v7f2433caa07f",
          },
          Object {
            "name": "workflow-aggregator",
            "version": "2.6",
          },
          Object {
            "name": "git",
            "version": "4.10.3",
          },
          Object {
            "name": "job-dsl",
            "version": "1.78.1",
          },
          Object {
            "name": "configuration-as-code",
            "version": "1414.v878271fc496f",
          },
          Object {
            "name": "kubernetes-credentials-provider",
            "version": "0.20",
          },
        ],
        "containers": Array [
          Object {
            "image": "jenkins/jenkins:lts",
            "imagePullPolicy": "Always",
            "name": "jenkins-master",
            "resources": Object {
              "limits": Object {
                "cpu": "1500m",
                "memory": "3Gi",
              },
              "requests": Object {
                "cpu": "1",
                "memory": "500M",
              },
            },
          },
        ],
        "disableCSRFProtection": false,
        "plugins": Array [
          Object {
            "name": "simple-theme-plugin",
            "version": "0.7",
          },
        ],
      },
      "seedJobs": Array [],
    },
  },
]
`;

exports[`a jenkins instance with all fields mentioned 1`] = `
Array [
  Object {
    "apiVersion": "jenkins.io/v1alpha2",
    "kind": "Jenkins",
    "metadata": Object {
      "labels": Object {
        "customApp": "my-jenkins",
      },
      "name": "cdk8s-jenkins-construct",
      "namespace": "jenkins-test-namespace",
    },
    "spec": Object {
      "configurationAsCode": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "groovyScripts": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "jenkinsAPISettings": Object {
        "authorizationStrategy": "createUser",
      },
      "master": Object {
        "basePlugins": Array [
          Object {
            "name": "kubernetes",
            "version": "1.31.3",
          },
          Object {
            "name": "workflow-job",
            "version": "1145.v7f2433caa07f",
          },
          Object {
            "name": "workflow-aggregator",
            "version": "2.6",
          },
          Object {
            "name": "git",
            "version": "4.10.3",
          },
          Object {
            "name": "job-dsl",
            "version": "1.78.1",
          },
          Object {
            "name": "configuration-as-code",
            "version": "1.55",
          },
          Object {
            "name": "kubernetes-credentials-provider",
            "version": "0.20",
          },
        ],
        "containers": Array [
          Object {
            "image": "jenkins/jenkins:lts",
            "imagePullPolicy": "Always",
            "name": "jenkins-master",
            "resources": Object {
              "limits": Object {
                "cpu": "1500m",
                "memory": "3Gi",
              },
              "requests": Object {
                "cpu": "1",
                "memory": "500M",
              },
            },
          },
        ],
        "disableCSRFProtection": true,
        "plugins": Array [
          Object {
            "name": "simple-theme-plugin",
            "version": "0.7",
          },
        ],
      },
      "seedJobs": Array [
        Object {
          "description": "Jenkins Operator repository",
          "id": "jenkins-operator",
          "repositoryBranch": "master",
          "repositoryUrl": "https://github.com/jenkinsci/kubernetes-operator.git",
          "targets": "cicd/jobs/*.jenkins",
        },
      ],
    },
  },
]
`;

exports[`a jenkins instance with an update to a base plugin 1`] = `
Array [
  Object {
    "apiVersion": "jenkins.io/v1alpha2",
    "kind": "Jenkins",
    "metadata": Object {
      "labels": Object {
        "app": "jenkins",
      },
      "name": "cdk8s-jenkins-construct",
      "namespace": "default",
    },
    "spec": Object {
      "configurationAsCode": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "groovyScripts": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "jenkinsAPISettings": Object {
        "authorizationStrategy": "createUser",
      },
      "master": Object {
        "basePlugins": Array [
          Object {
            "name": "kubernetes",
            "version": "1.31.3",
          },
          Object {
            "name": "workflow-job",
            "version": "1145.v7f2433caa07f",
          },
          Object {
            "name": "workflow-aggregator",
            "version": "2.6",
          },
          Object {
            "name": "git",
            "version": "4.10.3",
          },
          Object {
            "name": "job-dsl",
            "version": "1.78.1",
          },
          Object {
            "name": "configuration-as-code",
            "version": "1.55",
          },
          Object {
            "name": "kubernetes-credentials-provider",
            "version": "0.20",
          },
        ],
        "containers": Array [
          Object {
            "image": "jenkins/jenkins:lts",
            "imagePullPolicy": "Always",
            "name": "jenkins-master",
            "resources": Object {
              "limits": Object {
                "cpu": "1500m",
                "memory": "3Gi",
              },
              "requests": Object {
                "cpu": "1",
                "memory": "500M",
              },
            },
          },
        ],
        "disableCSRFProtection": false,
        "plugins": Array [],
      },
      "seedJobs": Array [],
    },
  },
]
`;

exports[`a jenkins instance with defaults 1`] = `
Array [
  Object {
    "apiVersion": "jenkins.io/v1alpha2",
    "kind": "Jenkins",
    "metadata": Object {
      "labels": Object {
        "app": "jenkins",
      },
      "name": "cdk8s-jenkins-construct",
      "namespace": "default",
    },
    "spec": Object {
      "configurationAsCode": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "groovyScripts": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "jenkinsAPISettings": Object {
        "authorizationStrategy": "createUser",
      },
      "master": Object {
        "basePlugins": Array [
          Object {
            "name": "kubernetes",
            "version": "1.31.3",
          },
          Object {
            "name": "workflow-job",
            "version": "1145.v7f2433caa07f",
          },
          Object {
            "name": "workflow-aggregator",
            "version": "2.6",
          },
          Object {
            "name": "git",
            "version": "4.10.3",
          },
          Object {
            "name": "job-dsl",
            "version": "1.78.1",
          },
          Object {
            "name": "configuration-as-code",
            "version": "1414.v878271fc496f",
          },
          Object {
            "name": "kubernetes-credentials-provider",
            "version": "0.20",
          },
        ],
        "containers": Array [
          Object {
            "image": "jenkins/jenkins:lts",
            "imagePullPolicy": "Always",
            "name": "jenkins-master",
            "resources": Object {
              "limits": Object {
                "cpu": "1500m",
                "memory": "3Gi",
              },
              "requests": Object {
                "cpu": "1",
                "memory": "500M",
              },
            },
          },
        ],
        "disableCSRFProtection": false,
        "plugins": Array [],
      },
      "seedJobs": Array [],
    },
  },
]
`;

exports[`a jenkins instance with disableCsrfProtection as true 1`] = `
Array [
  Object {
    "apiVersion": "jenkins.io/v1alpha2",
    "kind": "Jenkins",
    "metadata": Object {
      "labels": Object {
        "app": "jenkins",
      },
      "name": "cdk8s-jenkins-construct",
      "namespace": "default",
    },
    "spec": Object {
      "configurationAsCode": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "groovyScripts": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "jenkinsAPISettings": Object {
        "authorizationStrategy": "createUser",
      },
      "master": Object {
        "basePlugins": Array [
          Object {
            "name": "kubernetes",
            "version": "1.31.3",
          },
          Object {
            "name": "workflow-job",
            "version": "1145.v7f2433caa07f",
          },
          Object {
            "name": "workflow-aggregator",
            "version": "2.6",
          },
          Object {
            "name": "git",
            "version": "4.10.3",
          },
          Object {
            "name": "job-dsl",
            "version": "1.78.1",
          },
          Object {
            "name": "configuration-as-code",
            "version": "1414.v878271fc496f",
          },
          Object {
            "name": "kubernetes-credentials-provider",
            "version": "0.20",
          },
        ],
        "containers": Array [
          Object {
            "image": "jenkins/jenkins:lts",
            "imagePullPolicy": "Always",
            "name": "jenkins-master",
            "resources": Object {
              "limits": Object {
                "cpu": "1500m",
                "memory": "3Gi",
              },
              "requests": Object {
                "cpu": "1",
                "memory": "500M",
              },
            },
          },
        ],
        "disableCSRFProtection": true,
        "plugins": Array [],
      },
      "seedJobs": Array [],
    },
  },
]
`;

exports[`a jenkins instance with labels 1`] = `
Array [
  Object {
    "apiVersion": "jenkins.io/v1alpha2",
    "kind": "Jenkins",
    "metadata": Object {
      "labels": Object {
        "customApp": "my-jenkins",
      },
      "name": "cdk8s-jenkins-construct",
      "namespace": "default",
    },
    "spec": Object {
      "configurationAsCode": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "groovyScripts": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "jenkinsAPISettings": Object {
        "authorizationStrategy": "createUser",
      },
      "master": Object {
        "basePlugins": Array [
          Object {
            "name": "kubernetes",
            "version": "1.31.3",
          },
          Object {
            "name": "workflow-job",
            "version": "1145.v7f2433caa07f",
          },
          Object {
            "name": "workflow-aggregator",
            "version": "2.6",
          },
          Object {
            "name": "git",
            "version": "4.10.3",
          },
          Object {
            "name": "job-dsl",
            "version": "1.78.1",
          },
          Object {
            "name": "configuration-as-code",
            "version": "1414.v878271fc496f",
          },
          Object {
            "name": "kubernetes-credentials-provider",
            "version": "0.20",
          },
        ],
        "containers": Array [
          Object {
            "image": "jenkins/jenkins:lts",
            "imagePullPolicy": "Always",
            "name": "jenkins-master",
            "resources": Object {
              "limits": Object {
                "cpu": "1500m",
                "memory": "3Gi",
              },
              "requests": Object {
                "cpu": "1",
                "memory": "500M",
              },
            },
          },
        ],
        "disableCSRFProtection": false,
        "plugins": Array [],
      },
      "seedJobs": Array [],
    },
  },
]
`;

exports[`a jenkins instance with namespace 1`] = `
Array [
  Object {
    "apiVersion": "jenkins.io/v1alpha2",
    "kind": "Jenkins",
    "metadata": Object {
      "labels": Object {
        "app": "jenkins",
      },
      "name": "cdk8s-jenkins-construct",
      "namespace": "jenkins-test-namespace",
    },
    "spec": Object {
      "configurationAsCode": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "groovyScripts": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "jenkinsAPISettings": Object {
        "authorizationStrategy": "createUser",
      },
      "master": Object {
        "basePlugins": Array [
          Object {
            "name": "kubernetes",
            "version": "1.31.3",
          },
          Object {
            "name": "workflow-job",
            "version": "1145.v7f2433caa07f",
          },
          Object {
            "name": "workflow-aggregator",
            "version": "2.6",
          },
          Object {
            "name": "git",
            "version": "4.10.3",
          },
          Object {
            "name": "job-dsl",
            "version": "1.78.1",
          },
          Object {
            "name": "configuration-as-code",
            "version": "1414.v878271fc496f",
          },
          Object {
            "name": "kubernetes-credentials-provider",
            "version": "0.20",
          },
        ],
        "containers": Array [
          Object {
            "image": "jenkins/jenkins:lts",
            "imagePullPolicy": "Always",
            "name": "jenkins-master",
            "resources": Object {
              "limits": Object {
                "cpu": "1500m",
                "memory": "3Gi",
              },
              "requests": Object {
                "cpu": "1",
                "memory": "500M",
              },
            },
          },
        ],
        "disableCSRFProtection": false,
        "plugins": Array [],
      },
      "seedJobs": Array [],
    },
  },
]
`;

exports[`a jenkins instance with seed jobs 1`] = `
Array [
  Object {
    "apiVersion": "jenkins.io/v1alpha2",
    "kind": "Jenkins",
    "metadata": Object {
      "labels": Object {
        "app": "jenkins",
      },
      "name": "cdk8s-jenkins-construct",
      "namespace": "default",
    },
    "spec": Object {
      "configurationAsCode": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "groovyScripts": Object {
        "configurations": Array [],
        "secret": Object {
          "name": "",
        },
      },
      "jenkinsAPISettings": Object {
        "authorizationStrategy": "createUser",
      },
      "master": Object {
        "basePlugins": Array [
          Object {
            "name": "kubernetes",
            "version": "1.31.3",
          },
          Object {
            "name": "workflow-job",
            "version": "1145.v7f2433caa07f",
          },
          Object {
            "name": "workflow-aggregator",
            "version": "2.6",
          },
          Object {
            "name": "git",
            "version": "4.10.3",
          },
          Object {
            "name": "job-dsl",
            "version": "1.78.1",
          },
          Object {
            "name": "configuration-as-code",
            "version": "1414.v878271fc496f",
          },
          Object {
            "name": "kubernetes-credentials-provider",
            "version": "0.20",
          },
        ],
        "containers": Array [
          Object {
            "image": "jenkins/jenkins:lts",
            "imagePullPolicy": "Always",
            "name": "jenkins-master",
            "resources": Object {
              "limits": Object {
                "cpu": "1500m",
                "memory": "3Gi",
              },
              "requests": Object {
                "cpu": "1",
                "memory": "500M",
              },
            },
          },
        ],
        "disableCSRFProtection": false,
        "plugins": Array [],
      },
      "seedJobs": Array [
        Object {
          "description": "Jenkins Operator repository",
          "id": "jenkins-operator",
          "repositoryBranch": "master",
          "repositoryUrl": "https://github.com/jenkinsci/kubernetes-operator.git",
          "targets": "cicd/jobs/*.jenkins",
        },
      ],
    },
  },
]
`;
